Parse the media url in Block
Parse the media url in Block instead.

--- a/view/frontend/templates/media-preconnect.phtml
+++ b/view/frontend/templates/media-preconnect.phtml
@@ -1,7 +1,2 @@
-<?php
-$parsedUrl = parse_url($this->getMediaUrl());
-$url = $parsedUrl['scheme'] . '://' . $parsedUrl['host']
-?>
-
-<link rel="preconnect" href="<?= $url ?>" crossorigin>
-<link rel="dns-prefetch" href="<?= $url ?>">
+<link rel="preconnect" href="<?= $this->getMediaUrl() ?>" crossorigin>
+<link rel="dns-prefetch" href="<?= $this->getMediaUrl() ?>">
