--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="head.additional">
-            <block class="Magento\Framework\View\Element\Template" name="outeredge.sirv.script" template="OuterEdge_SirvOptimisations::sirv-script.phtml"/>
+            <block ifconfig="oe_sirv/settings/enable_sirv_js" class="Magento\Framework\View\Element\Template" name="outeredge.sirv.script" template="OuterEdge_SirvOptimisations::sirv-script.phtml"/>
         </referenceBlock>
      </body>
 </page>
