--- a/view/frontend/templates/sirv-script.phtml
+++ b/view/frontend/templates/sirv-script.phtml
@@ -6,5 +6,5 @@
 <link rel="preload" href="https://scripts.sirv.com/sirvjs/v3/sirv.js?modules=zoom,video,gallery" as="script">
 
 <!-- Load Sirv script asynchronously and defer execution -->
-<script src="https://scripts.sirv.com/sirvjs/v3/sirv.js?modules=zoom,video,gallery" async defer></script>
+<script src="https://scripts.sirv.com/sirvjs/v3/sirv.js?modules=zoom,video,gallery" defer></script>
 
