Update sirv-script.phtml (#5)
* Update sirv-script.phtml

Preload the Sirv script

* Update sirv-script.phtml

remove async

* Update sirv-script.phtml

---------

Co-authored-by: David Windell <david@outeredgeuk.com>

--- a/view/frontend/templates/sirv-script.phtml
+++ b/view/frontend/templates/sirv-script.phtml
@@ -1,3 +1,4 @@
 <link rel="preconnect" href="https://scripts.sirv.com" crossorigin>
 <link rel="dns-prefetch" href="https://scripts.sirv.com">
-<script src="https://scripts.sirv.com/sirvjs/v3/sirv.js?modules=zoom,video,gallery" async defer></script>
+<link rel="preload" href="https://scripts.sirv.com/sirvjs/v3/sirv.js?modules=zoom,video,gallery" as="script">
+<script src="https://scripts.sirv.com/sirvjs/v3/sirv.js?modules=zoom,video,gallery" defer></script>
